[package]
name = "cafebabe"
version = "0.8.0"
authors = ["Kartikaya Gupta"]
edition = "2018"
license = "0BSD"

description = "A simple parser for Java class files"
homepage = "https://github.com/staktrace/cafebabe/blob/main/README.md"
repository = "https://github.com/staktrace/cafebabe"
readme = "README.md"
keywords = ["parse", "java", "class", "jvm", "classfile"]
categories = ["parsing"]
exclude = [".gitignore", ".github/**", "examples/**", "tests/**"]

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = []
threadsafe = []

[dependencies]
bitflags = "1.0"
cesu8 = "1.1.0"

[dev-dependencies]
rayon = "1.10.0"

[[example]]
name = "threadsafe"
path = "examples/threadsafe.rs"
required-features = ["threadsafe"]
